src/components/manage/Blocks/DataFigure/less/public.less
.data-table-animation {
  display: none;
}

.data-table-animation.open {
  display: block;
  -webkit-animation: slide-down 0.3s ease-out;
  -moz-animation: slide-down 0.3s ease-out;
  animation: slide-down 0.3s ease-out;
}

.data-figure-toolbar {
  margin-top: 1rem;
}

@media print {
  .data-table-animation {
    display: block;

    page-break-inside: avoid;
  }

  table {
    page-break-inside: auto;
  }

  tr,
  th {
    page-break-inside: avoid;
  }
}

.sidebar-geo-data {
  padding: 20px 0 20px 0;
}

.metadata-sidebar {
  overflow-x: hidden;
}

.popup-wrap {
  border-radius: 0;
  opacity: 0.9;
}

.scale-image {
  transform: scale(0.72);
}

.data-figure-zoom {
  width: 90% !important;

  .data-figure-image {
    display: block !important;
    text-align: center;
  }

  .data-figure {
    width: 100%;
  }

  table {
    width: 100%;
    background-color: #fff;
    border-collapse: collapse;
    border-spacing: 0px;

    th {
      background-color: #787878;
      color: #fff;
      text-align: center;
    }

    tr,
    td {
      padding: 8px;
      border: 1px solid #787878;
      color: #787878;
    }
  }
}

// #136771 hide chart titles from svg derived from google charts svg
// which  follow this exact pattern
.data-figure svg > rect + g > text[text-anchor='start'] {
  display: none;
}

.data-figure-block {
  padding-top: 25px;
}

.ui.header.data-figure-block-header {
  color: #517776;
}

.data-source-toolbar {
  left: 740px !important;
}

.data-figure-control {
  border: none !important;
}

.download-data {
  display: inline-flex !important;

  a {
    padding-top: 0 !important;
  }
}

#page-add {
  .data-figure-edit {
    & {
      position: relative;
      pointer-events: none;
    }

    img {
      opacity: 0.1;
    }

    .toolbar-inner {
      display: none;
    }

    &:hover::before {
      border: none;
    }

    &::before {
      position: absolute;
      z-index: 2;
      top: 40%;
      left: 50%;
      content: attr(data-disabled-msg);
      opacity: 0.333;
      transform: translate(-50%, 0);
    }
  }
}

